--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MotionActivity"></activity>
+        <activity android:name=".MotionActivity"/>
         <activity android:name=".DrawableAnimation" />
         <activity android:name=".TweenAnimation" />
         <activity android:name=".MainActivity">
