--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".motionlayout.ReadBookActivity"></activity>
+        <activity android:name=".motionlayout.WriteActivity"></activity>
+        <activity android:name=".motionlayout.ReadBookActivity" />
         <activity android:name=".motionlayout.Example1Activity" />
         <activity android:name=".motionlayout.MotionActivity" />
         <activity android:name=".animation.DrawableAnimation" />
